# bare-rust

./: .gitignore  Architecture.md  CODEOWNERS  Cargo.toml  Makefile  README.md  build.rs  gen.sh  linker.ld  mem072.x  openocd.cfg  openocd.gdb  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
crates/app/: Cargo.toml
crates/app/src/: channel.rs  dispatch.rs  fib.rs  main.rs  metrics.rs  msg.rs  stack.rs  startup.rs  tasks.rs  vec.rs
crates/app/src/tasks/: buttons_task.rs  chat_task.rs  crypto_task.rs  display_task.rs  fib_task.rs  keyboard_task.rs  metrics_task.rs  mod.rs  net_link_task.rs  no_task.rs  render_task.rs  text_edit_task.rs
crates/bsp/: Cargo.toml
crates/bsp/src/: battery.rs  board.rs  buttons.rs  console.rs  debug.rs  display.rs  info.rs  inject.rs  keyboard.rs  led.rs  link.rs  mod.rs  netlink.rs  random.rs  storage.rs
crates/bsp/tests/: test_board_setup.rs
crates/cupcake/: Cargo.toml  README.md
crates/cupcake/.cargo/: config.toml
crates/cupcake/src/: hactar.rs  lib.rs  main.rs  task.rs  traits.rs
crates/dev/: Cargo.toml
crates/dev/src/: board.rs  button.rs  buttons.rs  console.rs  debug.rs  led.rs  mod.rs
crates/dev/tests/: test_board_setup.rs
crates/hal/: Cargo.toml  gen.sh
crates/hal/src/: board.rs  clock.rs  cpu.rs  gpio.rs  mod.rs  semihost.rs  spi.rs  svd.rs  svd_stm32f0x2.rs  svd_stm32f405.rs  timer.rs  uart.rs  watch_dog.rs
crates/hal/tests/: hal_test.rs  timer_tests.rs
crates/mgmt/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
crates/mgmt/.cargo/: config.toml
crates/mgmt/src/: main.rs  stack.rs  startup.rs
crates/sstd/: Cargo.toml
crates/ui/: Cargo.toml  openocd.cfg  openocd.gdb
crates/ui/.cargo/: config.toml
crates/ui/src/: channel.rs  dispatch.rs  main.rs  metrics.rs  semihost.rs  startup.rs  vec.rs
crates/ui/src/tasks/: buttons_task.rs  chat_task.rs  crypto_task.rs  fib_task.rs  keyboard_task.rs  link_task.rs  metrics_task.rs  mod.rs  net_link_task.rs  no_task.rs  render_task.rs  text_edit_task.rs
doc/: STM32F405.json  arch.md
src/: clock.rs  cpu.rs  gen_cpu.rs  gpio.rs  hal.rs  led.rs  main.rs  stack.rs  startup.rs  tasks.rs
src/hal/: board.rs  button.rs  clock.rs  console.rs  cpu.rs  debug.rs  gpio.rs  led.rs  mod.rs  semihost.rs  timer.rs  uart.rs
src/hal/cpu/: gen_cpu.rs
src/lib/hal/: gpio.rs  hal.rs  led.rs
tests/: hal_test.rs  timer_tests.rs
