[workspace]
members = ["crates/app","crates/hal","crates/dev",]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
#name = "bare-rust"
authors = ["Cullen Jennings <fluffy@iii.ca>"]
version = "0.1.1"
repository = "git@github.com:fluffy/bare-rust.git"
license = "BSD-2-Clause"

[workspace.dependencies]
# local crates
sstd = { path = "./crates/sstd", version = "0.0.0" }
hal = { path = "./crates/hal", version = "0.0.0" }
dev = { path = "./crates/dev", version = "0.0.0" }


[profile.release]
debug = "limited"
#opt-level = "s"
opt-level = 3
lto = "fat"
panic = "abort"

[profile.dev]
#opt-level = 3
#opt-level = "s"
opt-level = 1
debug = true
strip = "none"
lto = "fat"
panic = "abort"
