[package]
authors = ["Cullen Jennings <fluffy@iii.ca>"]
edition = "2021"
readme = "README.md"
name = "bsp"
version = "0.1.1"
repository = "git@github.com:fluffy/bare-rust.git"
license = "BSD-2-Clause"

[dependencies]
hal = { path = "../hal" }

[lib]
name = "bsp"
path = "src/mod.rs"
bench = false
test = false

[features]
std = []

