[package]
name = "spike-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.5", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
rtic = { version = "2.1.2", features = ["thumbv7-backend"] }
heapless = "0.8.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["rt", "stm32f405", "defmt"] # replace the model of your microcontroller here

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
