[package]
authors = ["Cullen Jennings <fluffy@iii.ca>"]
edition = "2021"
readme = "README.md"
name = "mgmt"
version = "0.1.1"
repository = "git@github.com:fluffy/bare-rust.git"
license = "BSD-2-Clause"

[dependencies]
hal = { path = "../hal", features = ["stm32f072"] }

[[bin]]
name = "mgmt"
test = false
bench = false


